rewarding is ready
