# feature/event/src/commonMain/kotlin/dev/alxminyaev/feature/event/api/models/RewardsListCriterionUsersRequest.kt
@@ -1,0 +1,23 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api.models
+
+import dev.alxminyaev.feature.event.api.models.RewardCriterionUsersRequest
+
+/**
+ * 
+ * @param data 
+ */
+data class RewardsListCriterionUsersRequest (
+    val data: kotlin.Array<RewardCriterionUsersRequest>
+) 
+
